--- a/index.html
+++ b/index.html
@@ -4,33 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Asignment-01</title>
+
+    <!-- Custom CSS  -->
     <link rel="stylesheet" href="style.css" />
+
   </head>
   <body>
-    <header>
-      <div class="logo">
-        <h1>Siam</h1>
-      </div>
-      <div class="download-resume">
-        <button type="button">Download Resume</button>
-      </div>
-    </header>
+    <!-- Header Section  -->
+    <header></header>
 
-    <div class="hero">
-      <div class="hero-content">
-        <div>
-          <img src="./assets/Group.png" alt="Hero-bg" />
-        </div>
-        <div class="hero-detail">
-          <h1>"In the near future, I hope to become a Developer."</h1>
-          <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text.
-          </p>
-          <a href="#"><button class="btn">Contact with me</button></a>
-        </div>
-      </div>
-    </div>
+    <!-- Main Section  -->
+    <main></main>
+
+    <!-- Footer Section  -->
+    <footer></footer>
 
     
   </body>
