Header Section Done

--- a/index.html
+++ b/index.html
@@ -11,10 +11,38 @@
   </head>
   <body>
     <!-- Header Section  -->
-    <header></header>
+    <header>
+      <!-- Nav Section  -->
+      <nav>
+        <h1>Siam.A</h1>
+        <div class="download-resume">
+          <button type="button">Download Resume</button>
+        </div>
+      </nav>
+
+      <!-- Banner Section  -->
+       <section class="banner">
+        <div class="banner-content">
+          <img src="./assets/Group.png" alt="Hero-bg" />
+          <div class="banner-text">
+            <h1>"In the near future, I hope to become a Developer."</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br>Ipsum has been the industry's standard dummy text.</p>
+          </div>
+          <a href="#"><button class="btn">Contact with me</button></a>
+        </div>
+       </section>
+    </header>
 
     <!-- Main Section  -->
-    <main></main>
+    <main>
+      <!-- Why Web Development?? -->
+      <section class="web-dev">
+        <div class="banner-text description">
+            <h1>"Why Web Development??"</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br>Ipsum has been the industry's standard dummy text.</p>
+          </div>
+      </section>
+    </main>
 
     <!-- Footer Section  -->
     <footer></footer>
