My inspiration Section Done

--- a/index.html
+++ b/index.html
@@ -38,10 +38,55 @@
       <!-- Why Web Development?? -->
       <section class="web-dev">
         <div class="banner-text description">
-            <h1>"Why Web Development??"</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br>Ipsum has been the industry's standard dummy text.</p>
+          <h2>"Why Web Development??"</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br>Ipsum has been the industry's standard dummy text.</p>
+        </div>
+        <div class="cards">
+          <!-- Card 1 -->
+          <div class="card">
+            <div class="card-text">
+              <h3>I will Do Coding and Change The World</h3>
+              <p>Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</p>
+              <button>Learn More</button>
+            </div>
+            <img src="./assets/Layer_1.png" alt="" >
           </div>
+          <!-- Card 2 -->
+          <div class="card card2">
+            <img src="./assets/Group 3.png" alt="" style="margin-right: 32px;">
+            <div class="card-text">
+              <h3>I will Do Coding and Change The World</h3>
+              <p>Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</p>
+              <button>Learn More</button>
+            </div>
+            
+          </div>
+          <!-- Card 3 -->
+          <div class="card">
+            <div class="card-text">
+              <h3>I will Do Coding and Change The World</h3>
+              <p>Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</p>
+              <button>Learn More</button>
+            </div>
+            <img src="./assets/Group 4.png" alt="">
+          </div>
+        </div>
       </section>
+
+      <!-- My Inspiration -->
+      <section class="my-inspiration">
+        <div class="banner-text description">
+          <h2>My Inspiration</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br>Ipsum has been the industry's standard dummy text.</p>
+        </div>
+        <div class="video-card">
+          <iframe src="https://www.youtube.com/embed/nvnSeig3DXM?si=luO5KIiB-e4Y4kmj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        
+      </section>
+
+      <!-- Target Section  -->
+       <section class="target-section"></section>
     </main>
 
     <!-- Footer Section  -->
