My Next Target Section Done

--- a/index.html
+++ b/index.html
@@ -127,7 +127,37 @@
           <h2>My Current Target</h2>
           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br>Ipsum has been the industry's standard dummy text.</p>
         </div>
-        <!-- box section  -->
+        <!-- long card container  -->
+         <div class="lg-card-container">
+          <!-- lg-card 1 -->
+          <div class="lg-card">
+            <img src="./assets/react.png" alt="">
+            <div class="lg-card-text">
+              <h4>ReactJS</h4>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+              <a href="">Learn More</a>
+            </div>
+          </div>
+          <!-- lg-card 1 -->
+          <div class="lg-card">
+            <img src="./assets/nodejs.png" alt="">
+            <div class="lg-card-text">
+              <h4>NodeJs</h4>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+              <a href="">Learn More</a>
+            </div>
+          </div>
+          <!-- lg-card 1 -->
+          <div class="lg-card">
+            <img src="./assets/mongodb.png" alt="">
+            <div class="lg-card-text">
+              <h4>MongoDB</h4>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+              <a href="">Learn More</a>
+            </div>
+          </div>
+         </div>
+
          
 
         
