I need support Section Done

--- a/index.html
+++ b/index.html
@@ -163,6 +163,22 @@
         
        </section>
 
+       <!-- I need Support Section-->
+        <section class="support-section">
+          <div>
+            <!-- text box  -->
+            <div class="support-text">
+              <h2>My Current Target</h2>
+              <p>Lorem Ipsum is simply dummy text of the printing and <br>typesetting industry.</p>
+            </div>
+            <!-- support contact section  -->
+            <div class="contact-form">
+              <input type="text" placeholder="Suggest me any feedback for me">
+              <button type="submit">Submit</button>
+            </div>
+          </div>
+        </section>
+
     </main>
 
     <!-- Footer Section  -->
