All texts are updated

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           <img src="./assets/Group.png" alt="Hero-bg" />
           <div class="banner-text">
             <h1>"In the near future, I hope to become a Developer."</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br>Ipsum has been the industry's standard dummy text.</p>
+            <p>As a skilled developer, I combine technical expertise with a creative mindset to develop <br>innovative software applications. I'm passionate about staying up-to-date <br>with the latest technologies and industry trends to provide cutting-edge solutions.</p>
           </div>
-          <a href="#"><button class="btn">Contact with me</button></a>
+          <a href="#contact"><button class="btn">Contact with me</button></a>
         </div>
        </section>
     </header>
@@ -39,14 +39,14 @@
       <section class="web-dev">
         <div class="banner-text description">
           <h2>"Why Web Development??"</h2>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br>Ipsum has been the industry's standard dummy text.</p>
+          <p>Designed for developers, by developers. Experience superior sound while coding.</p>
         </div>
         <div class="cards">
           <!-- Card 1 -->
           <div class="card">
             <div class="card-text">
               <h3>I will Do Coding and Change The World</h3>
-              <p>Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</p>
+              <p>Explore emerging trends and technologies shaping the future of web development, including AI, machine learning.</p>
               <button>Learn More</button>
             </div>
             <img src="./assets/Layer_1.png" alt="" >
@@ -55,8 +55,8 @@
           <div class="card card2">
             <img src="./assets/Group 3.png" alt="" style="margin-right: 32px;">
             <div class="card-text">
-              <h3>I will Do Coding and Change The World</h3>
-              <p>Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</p>
+              <h3>Best Practices for Web Development</h3>
+              <p>Learn essential guidelines and techniques for writing clean, efficient, and maintainable web code, such as accessibility, performance optimization</p>
               <button>Learn More</button>
             </div>
             
@@ -64,8 +64,8 @@
           <!-- Card 3 -->
           <div class="card">
             <div class="card-text">
-              <h3>I will Do Coding and Change The World</h3>
-              <p>Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry.</p>
+              <h3>Case Studies in Web Development</h3>
+              <p>Dive into real-world examples of successful web development projects, analyzing their challenges.</p>
               <button>Learn More</button>
             </div>
             <img src="./assets/Group 4.png" alt="">
@@ -77,7 +77,7 @@
       <section class="my-inspiration">
         <div class="banner-text description">
           <h2>My Inspiration</h2>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br>Ipsum has been the industry's standard dummy text.</p>
+          <p>Inspiration is a constant companion, a guiding light that illuminates <br> the path ahead. It's the fuel that."</p>
         </div>
         <div class="video-card">
           <iframe src="https://www.youtube.com/embed/nvnSeig3DXM?si=luO5KIiB-e4Y4kmj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -90,7 +90,7 @@
         <!-- text box  -->
         <div class="banner-text description">
           <h2>My Current Target</h2>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br>Ipsum has been the industry's standard dummy text.</p>
+          <p>The goals and objectives I'm striving to achieve in my web development career.</p>
         </div>
         <!-- box section  -->
          <div class="box-container">
@@ -98,21 +98,21 @@
           <div class="box box1">
             <img src="./assets/html.png" alt="">
             <h4>HTML</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing.</p>
+            <p>The people, places, and experiences that fuel my passion and drive.</p>
             <a href="">Learn More</a>
           </div>
           <!-- box 2 -->
           <div class="box box2">
             <img src="./assets/css.png" alt="">
             <h4>CSS</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing.</p>
+            <p>A collection of moments that have shaped who I am.</p>
             <a href="">Learn More</a>
           </div>
           <!-- box 3 -->
           <div class="box box3">
             <img src="./assets/js.png" alt="">
             <h4>JavaScript</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing.</p>
+            <p>The challenges I've overcome and the lessons I've learned.</p>
             <a href="">Learn More</a>
           </div>
          </div>
@@ -124,8 +124,8 @@
        <section class="next-target-section">
         <!-- text box  -->
         <div class="banner-text description">
-          <h2>My Current Target</h2>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem <br>Ipsum has been the industry's standard dummy text.</p>
+          <h2>My Next Target</h2>
+          <p>Mastering advanced web development frameworks and libraries. <br>Deepening my understanding of web performance optimization and accessibility.</p>
         </div>
         <!-- long card container  -->
          <div class="lg-card-container">
@@ -134,7 +134,7 @@
             <img src="./assets/react.png" alt="">
             <div class="lg-card-text">
               <h4>ReactJS</h4>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+              <p>React JS is a JavaScript library for building user interfaces. It's primarily used to create dynamic and interactive web applications. React's component-based </p>
               <a href="">Learn More</a>
             </div>
           </div>
@@ -143,7 +143,7 @@
             <img src="./assets/nodejs.png" alt="">
             <div class="lg-card-text">
               <h4>NodeJs</h4>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+              <p>Node.js is a powerful JavaScript runtime environment that allows you to build scalable, high-performance network applications. It's based on Google's V8</p>
               <a href="">Learn More</a>
             </div>
           </div>
@@ -152,7 +152,7 @@
             <img src="./assets/mongodb.png" alt="">
             <div class="lg-card-text">
               <h4>MongoDB</h4>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+              <p>MongoDB is a popular NoSQL database that stores data in flexible, document-oriented structures. It's designed to handle large volumes of data and scale horizontally.</p>
               <a href="">Learn More</a>
             </div>
           </div>
@@ -168,8 +168,8 @@
           <div>
             <!-- text box  -->
             <div class="support-text">
-              <h2>My Current Target</h2>
-              <p>Lorem Ipsum is simply dummy text of the printing and <br>typesetting industry.</p>
+              <h2>I need Support</h2>
+              <p>Building a successful portfolio of web development projects. <br>What I'm working towards right now. </p>
             </div>
             <!-- support contact section  -->
             <div class="contact-form">
@@ -182,7 +182,7 @@
     </main>
 
     <!-- Footer Section  -->
-    <footer>
+    <footer id="contact">
       <div class="footer-container">
         <h4>An Open Commitment by Awlad Hossain</h4>
         <div class="icon-box">
