--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
       <div class="footer-container">
         <h4>An Open Commitment by Awlad Hossain</h4>
         <div class="icon-box">
-          <a href="facebook.com" target="_blank"><img src="./assets/facebook.png" alt=""></a>
-          <a href="github.com" target="_blank"><img src="./assets/github.png" alt=""></a>
-          <a href="linkedin.com" target="_blank"><img src="./assets/linkedin-icon 1.png" alt=""></a>
+          <a href="https://www.facebook.com" target="_blank"><img src="./assets/facebook.png" alt=""></a>
+          <a href="https://www.github.com" target="_blank"><img src="./assets/github.png" alt=""></a>
+          <a href="https://www.linkedin.com" target="_blank"><img src="./assets/linkedin-icon 1.png" alt=""></a>
         </div>
       </div>
     </footer>
